--- a/Umbrella/gradle/wrapper/gradle-wrapper.properties
+++ b/Umbrella/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-#Mon Jan 23 12:05:13 CST 2017
+#Sun Sep 17 02:05:45 PDT 2017
+com.foo.umbrella.weatherundergroundapikey=c07ee4f8e2801bd8
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
